WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253547
The 'length' argument of U16_FWD_1 in TextUtil::breakWord is wrong
https://bugs.webkit.org/show_bug.cgi?id=253547
Summary
The 'length' argument of U16_FWD_1 in TextUtil::breakWord is wrong
Fujii Hironori
Reported
2023-03-07 17:06:38 PST
The 'length' argument of U16_FWD_1 in TextUtil::breakWord is wrong If I applied
bug#215318
patch, fast/text/midword-break-before-surrogate-pair.html is failing as assertion failure for WinCairo debug, and it is failing as infinite loop for WinCairo release.
> ASSERTION FAILED: middle >= left && middle < right > C:\home\webkit\gc\Source\WebCore\layout/formattingContexts/inline/text/TextUtil.cpp(276) : WebCore::Layout::TextUtil::breakWord::<lambda_1>::operator ()
Attachments
WIP patch
(750 bytes, patch)
2023-03-07 17:08 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-03-07 17:08:06 PST
Created
attachment 465349
[details]
WIP patch
Fujii Hironori
Comment 2
2023-03-08 19:30:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11271
EWS
Comment 3
2023-03-08 22:33:29 PST
Committed
261406@main
(b625b7e2bbd3): <
https://commits.webkit.org/261406@main
> Reviewed commits have been landed. Closing PR #11271 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-03-08 22:34:16 PST
<
rdar://problem/106484626
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug