Cherry-pick 261406@main (b625b7e2bbd3). https://bugs.webkit.org/show_bug.cgi?id=253547

The 'length' argument of U16_FWD_1 in TextUtil::breakWord is wrong
    https://bugs.webkit.org/show_bug.cgi?id=253547

    Reviewed by Alan Baradlay.

    The test fast/text/midword-break-before-surrogate-pair.html was
    failing as the following assertion failure for WinCairo debug, and
    timing out by an infinite loop for WinCairo release.

    > ASSERTION FAILED: middle >= left && middle < right
    > Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp(276) : WebCore::Layout::TextUtil::breakWord::<lambda_1>::operator ()

    U16_FWD_1 in nextUserPerceivedCharacterIndex didn't work as expected
    because the third argument was wrong. It should be a length of the
    input string, but 'length' is the length of the substring starting at
    'startPosition'.

    * LayoutTests/platform/wincairo/TestExpectations:
    * Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
    (WebCore::Layout::TextUtil::breakWord):

    Canonical link: https://commits.webkit.org/261406@main